# anaplan-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  zensical.toml
anaplan_mcp/: __init__.py  __main__.py  _filters.py  _registry.py  _server.py
docs/: index.md  python-api.md
